Chest Inventory Working

--- a/GEP_Template/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GEP_Template/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -355,7 +355,7 @@ WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputMod
 PlayerStart=PropertyWrapper.DefaultValueCategory.InventorySlot
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Input
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -421,8 +421,9 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
@@ -436,7 +437,6 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=UserDefinedStructureEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/BP_Chest.BP_Chest
 OpenAssetsAtExit=/Game/DT_ItemDataTable.DT_ItemDataTable
@@ -1606,10 +1606,10 @@ TakeRecorderAudioInputSettings="\"Object.AudioInputDevice\" "
 BoxComponent="\"Object.Collision.BodyInstance\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/WB_InventorySlot
-MRUItem1=/Game/BP_Item
-MRUItem2=/Game/ThirdPerson/Input/Actions/IA_Inventory
-MRUItem3=/Game/ThirdPerson/Input/Actions/IA_Interact
+MRUItem0=/Game/ThirdPerson/Input/Actions/IA_Interact
+MRUItem1=/Game/WB_InventorySlot
+MRUItem2=/Game/BP_Item
+MRUItem3=/Game/ThirdPerson/Input/Actions/IA_Inventory
 MRUItem4=/Game/ThirdPerson/Input/IMC_Default
 MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 MRUItem6=/Game/BP_InventoryComponent
